Initial work on solver without implementations

--- a/Assignment1/Assignment1.vcxproj
+++ b/Assignment1/Assignment1.vcxproj
@@ -149,10 +149,14 @@
   <ItemGroup>
     <ClCompile Include="Action.cpp" />
     <ClCompile Include="Assignment1.cpp" />
+    <ClCompile Include="Goal.cpp" />
+    <ClCompile Include="Solver.cpp" />
     <ClCompile Include="State.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Action.h" />
+    <ClInclude Include="Goal.h" />
+    <ClInclude Include="Solver.h" />
     <ClInclude Include="State.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
