--- a/Assignment1/Assignment1.vcxproj
+++ b/Assignment1/Assignment1.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="node.h" />
     <ClInclude Include="Options.h" />
     <ClInclude Include="Solver.h" />
+    <ClInclude Include="SolverType.h" />
     <ClInclude Include="State.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
