--- a/Assignment1/Assignment1.vcxproj.filters
+++ b/Assignment1/Assignment1.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Options.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SolverType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
