Completed HD version of assignment

--- a/Assignment1/Assignment1.vcxproj
+++ b/Assignment1/Assignment1.vcxproj
@@ -149,6 +149,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Assignment1.cpp" />
+    <ClCompile Include="Goal.cpp" />
     <ClCompile Include="node.cpp" />
     <ClCompile Include="Options.cpp" />
     <ClCompile Include="Solver.cpp" />
